--- a/src/templates/app/product/inc/information.phtml
+++ b/src/templates/app/product/inc/information.phtml
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
-                    <?php $this->insert("inc/common/image_upload", ['id' => 'logo_' . $lang, 'title' => __('app.product.title'), 'inputName' => 'logo_' . $lang, 'recommendedDimensions' => '645px × 100px']) ?>
+                    <?php $this->insert("inc/common/image_upload", ['id' => 'logo_' . $lang, 'title' => __('app.product.title'), 'inputName' => 'logo_' . $lang, 'recommendedDimensions' => '645px × ' . __('app.common.max') . ' 74px']) ?>
                 </div>
                 <div class="col-md-4 text-center">
                     <?php $this->insert("inc/common/image_upload", ['id' => 'photo_' . $lang, 'title' => __('app.product.photo'), 'inputName' => 'photo_' . $lang, 'recommendedDimensions' => '400px × 220px']) ?>
