Usuario puede crear recetario, npción no mostar código referencia, CMYK -> PRINT

--- a/src/templates/app/booklet/form.phtml
+++ b/src/templates/app/booklet/form.phtml
@@ -172,7 +172,7 @@
                         </div>
                         <div class="card-body">
                             <div class="row mb-2">
-                                <div class="col-lg-10 fv-row form-item">
+                                <div class="form-item">
                                     <div class="d-flex align-items-center mt-3 radio-list">
                                         <label class="form-check form-check-custom form-check-inline me-10">
                                             <input class="form-check-input" name="cover_type" type="radio" value="select" allow-save-invalid>
