--- a/src/templates/app/pdf/recipe/recipe.phtml
+++ b/src/templates/app/pdf/recipe/recipe.phtml
@@ -463,7 +463,7 @@ function _b($text) {
             font-weight: 700;
         }
 
-        .text-cell .reference-name {
+        .text-cell .reference-name.has-reference {
             margin-left: -5px;
         }
 
@@ -704,8 +704,8 @@ function _b($text) {
                                                                                     <span class="radio-circle"></span>
                                                                                 </span>
                                                                                 <span class="text-cell">
-                                                                                    <span class="reference"><?= $sub['reference'] ?></span>
-                                                                                    <span class="reference-name">
+                                                                                    <?php if (!empty($sub['reference'])): ?><span class="reference"><?= $sub['reference'] ?></span><?php endif; ?>
+                                                                                    <span class="reference-name<?= !empty($sub['reference']) ? ' has-reference' : '' ?>">
                                                                                         <?php if (!empty($sub['name'])): ?>
                                                                                             <?= _b($sub['name']) ?>
                                                                                         <?php endif; ?>
