--- a/src/templates/app/recipe/form.phtml
+++ b/src/templates/app/recipe/form.phtml
@@ -4,7 +4,8 @@
     data-js="RecipeForm"
     action="/app/recipe/save/<?php echo \App\Constant\App\FormSaveMode::SaveAndContinue ?>"
     method="post"
-    autocomplete="off">
+    autocomplete="off"
+    data-default-market-id="<?php echo !empty($data['default_market_id']) ? $data['default_market_id'] : '' ?>">
     <?php
     $this->insert(
         "inc/common/subheader",
@@ -102,10 +103,21 @@
                             </div>
 
                             <div class="col-lg-6">
-                                <label class="col-form-label" for="user_status_id"><?php echo __('app.recipe.international') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.international_text')]); ?></label>
-                                <div class="d-flex align-items-center">
-                                    <div class="form-check form-check-solid form-switch">
-                                        <input class="form-check-input w-45px h-30px" type="checkbox" id="international" name="international" value="1" />
+                                <label class="col-form-label"><?php echo __('app.recipe.reference_code_type') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.national_code_text')]); ?></label>
+                                <div class="form-item">
+                                    <div class="d-flex align-items-center mt-3 radio-list">
+                                        <label class="form-check form-check-custom form-check-inline me-10 text-nowrap">
+                                            <input class="form-check-input" name="international" type="radio" value="<?= App\Constant\International::NationalCode ?>">
+                                            <span class="fw-semibold ps-3 fs-6"><?= __('app.recipe.national_code') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.national_code_text')]); ?></span>
+                                        </label>
+                                        <label class="form-check form-check-custom form-check-inline me-10 text-nowrap">
+                                            <input class="form-check-input" name="international" type="radio" value="<?= App\Constant\International::InternationalCode ?>">
+                                            <span class="fw-semibold ps-3 fs-6"><?= __('app.recipe.international_code') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.international_code_text')]); ?></span>
+                                        </label>
+                                        <label class="form-check form-check-custom form-check-inline me-10 text-nowrap">
+                                            <input class="form-check-input" name="international" type="radio" value="<?= App\Constant\International::NoCode ?>">
+                                            <span class="fw-semibold ps-3 fs-6"><?= __('app.recipe.no_code') ?></span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
