--- a/src/templates/app/recipe/form.phtml
+++ b/src/templates/app/recipe/form.phtml
@@ -103,7 +103,7 @@
                             </div>
 
                             <div class="col-lg-6">
-                                <label class="col-form-label"><?php echo __('app.recipe.reference_code_type') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.national_code_text')]); ?></label>
+                                <label class="col-form-label"><?php echo __('app.recipe.reference_code_type') ?></label>
                                 <div class="form-item">
                                     <div class="d-flex align-items-center mt-3 radio-list">
                                         <label class="form-check form-check-custom form-check-inline me-10 text-nowrap">
