--- a/public/app/css/project/custom.css
+++ b/public/app/css/project/custom.css
@@ -605,3 +605,8 @@ input[type="file"] ~ div .form-control{
     background-color: #FFF !important;
     border: 1px solid var(--bs-gray-300)
 }
+
+.color-option {
+    width: 30px;
+    height: 30px;
+}
