--- a/src/templates/app/recipe/form.phtml
+++ b/src/templates/app/recipe/form.phtml
@@ -44,7 +44,7 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col md-6">
+                            <div class="col-md-6">
                                 <label class="col-form-label required"><?php echo __('app.common.name') ?></label>
                                 <div>
                                     <input type="text" class="form-control" required placeholder="<?php echo __('app.common.name') ?>" name="name" maxlength="45" />
@@ -102,23 +102,30 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 <label class="col-form-label"><?php echo __('app.recipe.reference_code_type') ?></label>
                                 <div class="form-item">
-                                    <div class="d-flex align-items-center mt-3 radio-list">
-                                        <label class="form-check form-check-custom form-check-inline me-10 text-nowrap">
+                                    <div class="d-flex flex-column justify-content-between mt-3 radio-list">
+                                        <label class="form-check form-check-custom form-check-inline mb-2 text-nowrap">
                                             <input class="form-check-input" name="international" type="radio" value="<?= App\Constant\International::NationalCode ?>">
                                             <span class="fw-semibold ps-3 fs-6"><?= __('app.recipe.national_code') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.national_code_text')]); ?></span>
                                         </label>
-                                        <label class="form-check form-check-custom form-check-inline me-10 text-nowrap">
+                                        <label class="form-check form-check-custom form-check-inline mb-2 text-nowrap">
                                             <input class="form-check-input" name="international" type="radio" value="<?= App\Constant\International::InternationalCode ?>">
                                             <span class="fw-semibold ps-3 fs-6"><?= __('app.recipe.international_code') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.international_code_text')]); ?></span>
                                         </label>
-                                        <label class="form-check form-check-custom form-check-inline me-10 text-nowrap">
+                                        <label class="form-check form-check-custom form-check-inline text-nowrap">
                                             <input class="form-check-input" name="international" type="radio" value="<?= App\Constant\International::NoCode ?>">
                                             <span class="fw-semibold ps-3 fs-6"><?= __('app.recipe.no_code') ?></span>
                                         </label>
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <label class="col-form-label required"><?php echo __('app.recipe.code') ?><?php $this->insert('inc/common/tooltip', ['tooltip' => $this->e('app.recipe.code_text')]); ?></label>
+                                <div>
+                                    <input type="text" class="form-control" required placeholder="<?php echo __('app.recipe.code') ?>" name="code" minlength="9" maxlength="9" />
                                 </div>
                             </div>
                         </div>
